# anorak

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_docker.sh  start_docker.sh  watch_server.sh  watch_test.sh
.github/workflows/: rust.yml
assets/: index.html  query.html  style.css
design/: favicon.xcf
src/: app_error.rs  config.rs  main.rs  utils.rs
src/models/: mod.rs
src/routes/: mod.rs  query.rs  send_to_transmission.rs
tests/: test_query.rs
