[package]
name = "anorak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.0", features = ["full"]}
httpc-test = "0.1.7"
anyhow = "1.0.75"
reqwest = "0.11.22"
serde = "1.0.193"
serde-xml-rs = "0.6.0"
serde_json = "1.0.108"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
urlencoding = "2.1.3"
axum-htmx = "0.5.0"

[dev-dependencies]
