[package]
name = "anorak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"]}
anyhow = "1"
reqwest = { version = "0.11", default-features = true }
serde = "1"
serde-xml-rs = "0.6"
serde_json = "1"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
urlencoding = "2"
axum-htmx = "0.5"
minijinja = { version = "1", features = ["loader"]}
once_cell = "1"
log = "0.4"
pretty_env_logger = "0.5"
chrono = "0.4"
transmission-rpc = "0.4"

[dev-dependencies]
httpc-test = "0.1"
